# a2a-demo

./: .gitignore  pyproject.toml
articles/: 1_intro.md
src/a2a/client/: client.py
src/a2a/common/: common.py  types.py
src/a2a/server/: BaseAgent.py  agent_task_manager.py  base_agent.py  server.py  task_manager.py
src/a2a/utils/: card_resolver.py  push_notification_auth.py
src/agent_coach/: __main__.py  agent.py
src/agent_handoff/: __main__.py  agent.py  state.py
src/agent_supervisor/: agent.py  logger.py  model.py  utils.py
src/ui/: main.py  mesop.py
